--- a/index.html
+++ b/index.html
@@ -1,14 +1,78 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width, initial-scale=1.0"><meta name=description content="The art of integrity through words, websites, and optimisation."><meta name=author><title>THINK LN.</title><link href=bootstrap/css/bootstrap.min.css rel=stylesheet><link href="//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic|Roboto+Slab:400,100,300,700" rel=stylesheet type=text/css><link href=styles/themify-icons.css rel=stylesheet type=text/css><link href=styles/animate.css rel=stylesheet><link href=styles/owl.carousel.css rel=stylesheet><link href=styles/style.css rel=stylesheet><link href=styles/custom.css rel=stylesheet></head><body class=loaded><div class="layout-wrapper page" id=page><section class="big-hero section background-wrapper fullscreen with-overlay black-overlay active-section" style="height: 567px;"><div class=parallax-background data-stellar-background-ratio=0.5></div><div class="container middle-content"><div class=row><div class=col-md-8><div class=element><h1 class=lighter><strong>THINK LN.</strong> The art of integrity through words, websites, and optimisation.</h1><div class=space></div><p><a class="btn btn-punch btn-primary btn-md btn-darker" role=button href=https://twitter.com/THINKLN target=_blank><i class="icon ti-twitter-alt text-primary"></i> Follow</a> <a class="btn btn-punch btn-white hover-primary hover-colors btn-md" role=button href="mailto:thinkln@maily.pro?subject=THINK LN. "><i class="icon ti-email text-primary"></i> Email</a></p></div></div></div></div></section><script src=js/main.min.js></script><script type=text/javascript>
-          var _gauges = _gauges || [];
-          (function() {
-            var t   = document.createElement('script');
-            t.type  = 'text/javascript';
-            t.async = true;
-            t.id    = 'gauges-tracker';
-            t.setAttribute('data-site-id', '551d18f35dd0534cde002b7b');
-            t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
-            t.src = 'https://track.gaug.es/track.js';
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(t, s);
-          })();
-        </script></div></body></html>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="stuff/favicon.ico">
+
+    <title>THINK LN.</title>
+
+    <link href="//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic|Roboto+Slab:400,100,300,700" rel=stylesheet type=text/css>
+
+    <!-- Bootstrap core CSS
+    <link href="stuff/bootstrap.min.css" rel="stylesheet">
+    <link href="stuff/cover.css" rel="stylesheet">
+    <link href="stuff/custom.css" rel="stylesheet"-->
+
+    <link href="stuff/css.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="stuff/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h1 class="cover-heading">THINK LN.</h1>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h2 class="blurb">The art of integrity through websites, words, and optimisation.</h2>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Contact via <a href="thinkln@maily.pro">Email</a> and <a class="twitter" href="https://twitter.com/THINKLANE">Twitter</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!--script src="stuff/jquery.min.js"></script>
+    <script src="stuff/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--script src="stuff/ie10-viewport-bug-workaround.js"></script-->
+
+    <!--script src="stuff/min/js.min.js"></script-->
+
+
+<span id="copylAddress" style="display: inline-block; position: absolute; left: -9999em;"></span></body></html>
