--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Contact via <a href="thinkln@maily.pro">Email</a> and <a class="twitter" href="https://twitter.com/THINKLANE">Twitter</a>.</p>
+              <p>Contact via <a href="mailto:thinkln@maily.pro">Email</a> and <a class="twitter" href="https://twitter.com/THINKLANE">Twitter</a>.</p>
             </div>
           </div>
 
