--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="inner cover">
-            <h2 class="blurb">The art of integrity through websites, words, and optimisation.</h2>
+            <h2 class="blurb">The art of integrity in the World advertising.</h2>
           </div>
 
           <div class="mastfoot">
@@ -74,5 +74,19 @@
 
     <!--script src="stuff/min/js.min.js"></script-->
 
+    <script type="text/javascript">
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '551d18f35dd0534cde002b7b');
+        t.setAttribute('data-track-path', 'https://track.gaug.es/track.gif');
+        t.src = 'https://track.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
+    </script>
 
-<span id="copylAddress" style="display: inline-block; position: absolute; left: -9999em;"></span></body></html>
+</body></html>
