--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="inner cover">
-            <h2 class="blurb">The art of integrity in the World advertising.</h2>
+            <h2 class="blurb">The art of integrity in the World of Advertising.</h2>
           </div>
 
           <div class="mastfoot">
