--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="inner cover">
-            <h2 class="blurb">Writing, Copywriting, and Concept Ads.</h2>
+            <h2 class="blurb">Digital Consulting &amp; Solutions.</h2>
           </div>
 
           <div class="mastfoot">
